# DeDRM_tools

./: .gitignore  README-bls19.md  README.md  pyproject.toml
DeDRM_plugin/: adobekey.py  ineptepub.py  ineptpdf.py
