[tool.poetry]
name = "dedrm-tools-git"
version = "0.1.0"
description = ""
authors = ["Oliver Wagner <oliver@wagner-www.de>"]
readme = "README.md"
packages = [{include = "DeDRM_plugin"}]

[tool.poetry.dependencies]
python = "^3.13"
pycryptodomex = "^3.22.0"
defusedxml = "^0.7.1"
lxml = "^5.3.2"
pyopenssl = "^25.0.0"
typer = "^0.15.2"

[tool.poetry.scripts]
decryptEPUB = "DeDRM_plugin.ineptepub:app"
decryptPDF = "DeDRM_plugin.ineptpdf:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
